gitops/02-services/monitoring/grafana-private-HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-private
  namespace: monitoring
spec:
  parentRefs:
    - name: private
      namespace: istio-system
      sectionName: https
  hostnames:
    - "monitoring.mmonteiro.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: victoria-metrics-k8s-stack-grafana
          port: 80
