gitops/02-services/monitoring/kiali-private-HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kiali-private
  namespace: monitoring
spec:
  parentRefs:
    - name: private
      namespace: istio-system
      sectionName: https
  hostnames:
    - "kiali.mmonteiro.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kiali
          port: 20001
